manifests/nestjs/nestjs-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nestjs
spec:
  ports:
  - port: 3001
  selector:
    app: nestjs
