manifests/nestjs/nestjs-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nestjs-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: nestjs.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nestjs
            port:
              number: 80
